--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
@@ -71,7 +71,7 @@ spec:
                   title: Image Host
                   type: string
                   description: Host for storing image
-                  default: quay-thwf8.apps.cluster-mmfq5.mmfq5.sandbox2588.opentlc.com
+                  default: quay-7p5mh.apps.cluster-7p5mh.7p5mh.sandbox1083.opentlc.com
                 image_organization:
                   title: Organization
                   type: string
@@ -94,9 +94,9 @@ spec:
               title: Repo Host
               type: string
               description: Your SCM host
-              default: gitlab-gitlab.apps.cluster-mmfq5.mmfq5.sandbox2588.opentlc.com
+              default: gitlab-gitlab.apps.cluster-7p5mh.7p5mh.sandbox1083.opentlc.com
               enum:
-                - gitlab-gitlab.apps.cluster-mmfq5.mmfq5.sandbox2588.opentlc.com
+                - gitlab-gitlab.apps.cluster-7p5mh.7p5mh.sandbox1083.opentlc.com
             owner:
               title: Repo Owner
               type: string
