--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
@@ -126,7 +126,7 @@ spec:
           description: ${{ parameters.description }}
           namespace: ${{ parameters.component_id }}-dev
           owner: ${{ user.entity.metadata.name }}
-          cluster: .apps.cluster-mmfq5.mmfq5.sandbox2588.opentlc.com
+          cluster: .apps.cluster-7p5mh.7p5mh.sandbox1083.opentlc.com
           host: ${{ parameters.repo.host }}
           destination: ${{ parameters.repo.owner }}/${{ parameters.component_id }}
           quay_destination: ${{ parameters.image_organization}}/${{ parameters.component_id }}
@@ -162,7 +162,7 @@ spec:
           source_repository: https://${{ parameters.repo.host }}/${{ parameters.repo.owner }}/${{parameters.component_id}}.git
           repository_name: ${{parameters.component_id}}
           git_owner: ${{ parameters.repo.owner }}
-          cluster: .apps.cluster-mmfq5.mmfq5.sandbox2588.opentlc.com
+          cluster: .apps.cluster-7p5mh.7p5mh.sandbox1083.opentlc.com
           namespace: ${{ parameters.component_id }}-dev
           image_registry: ${{ parameters.image_registry }}
           image_host: ${{ parameters.image_host }}
