--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/manifests/helm/app/templates/pgvector-deployment.yaml
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/manifests/helm/app/templates/pgvector-deployment.yaml
@@ -30,12 +30,12 @@ spec:
                   - /bin/bash
                   - -c
                   - |
-                    export PGPASSWORD=${POSTGRESQL_PASSWORD}
-                    until pg_isready -h localhost -U ${POSTGRESQL_USER} -d ${POSTGRESQL_DATABASE}; do
+                    export PGPASSWORD=postgres
+                    until pg_isready -h localhost -U postgres -d postgres; do
                       echo "Waiting for PostgreSQL to be ready..."
                       sleep 2
                     done
-                    psql -h localhost -U ${POSTGRESQL_USER} -d ${POSTGRESQL_DATABASE} -c "CREATE EXTENSION IF NOT EXISTS vector;" || true
+                    psql -h localhost -U postgres -d postgres -c "CREATE EXTENSION IF NOT EXISTS vector;"
           readinessProbe:
             exec:
               command:
