--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/src/main/resources/application.properties
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/src/main/resources/application.properties
@@ -17,7 +17,7 @@ quarkus.langchain4j.pgvector.dimension=384
 quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.embedding.onnx.bgesmallenq.BgeSmallEnQuantizedEmbeddingModel
 
 quarkus.langchain4j.mcp.weather.transport-type=http
-quarkus.langchain4j.mcp.weather.url=http://mcp-weather.svc/mcp/sse
+quarkus.langchain4j.mcp.weather.url=http://mcp-weather.${{values.namespace}}.svc/mcp/sse
 
 quarkus.langchain4j.timeout=10m
 
