--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/src/main/resources/application.properties
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/src/main/resources/application.properties
@@ -17,7 +17,7 @@ quarkus.langchain4j.pgvector.dimension=384
 quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.embedding.onnx.bgesmallenq.BgeSmallEnQuantizedEmbeddingModel
 
 quarkus.langchain4j.mcp.weather.transport-type=http
-quarkus.langchain4j.mcp.weather.url=http://mcp-weather.${{values.namespace}}.svc/mcp/sse
+quarkus.langchain4j.mcp.weather.url=http://mcp-weather/mcp/sse
 
 quarkus.langchain4j.timeout=10m
 
@@ -27,3 +27,5 @@ quarkus.langchain4j.timeout=10m
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://pgvector:5432/quarkus?loggerLevel=OFF
 %prod.quarkus.datasource.password=quarkus
 %prod.quarkus.datasource.username=quarkus
+# Just for demo purposes..
+%prod.quarkus.hibernate-orm.sql-load-script = import.sql
