--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
@@ -95,8 +95,6 @@ spec:
               type: string
               description: Your SCM host
               default: gitlab-gitlab.apps.cluster-lhc2z.lhc2z.sandbox5291.opentlc.com
-              enum:
-                - gitlab-gitlab.apps.cluster-lhc2z.lhc2z.sandbox5291.opentlc.com
             owner:
               title: Repo Owner
               type: string
@@ -126,7 +124,7 @@ spec:
           description: ${{ parameters.description }}
           namespace: ${{ parameters.component_id }}-dev
           owner: ${{ user.entity.metadata.name }}
-          cluster: .apps.cluster-lhc2z.lhc2z.sandbox5291.opentlc.com
+          cluster: .apps.cluster-7lc5n.7lc5n.sandbox1650.opentlc.com
           host: ${{ parameters.repo.host }}
           destination: ${{ parameters.repo.owner }}/${{ parameters.component_id }}
           quay_destination: ${{ parameters.image_organization}}/${{ parameters.component_id }}
