--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/template.yaml
@@ -71,7 +71,7 @@ spec:
                   title: Image Host
                   type: string
                   description: Host for storing image
-                  default: quay-bjqtd.apps.cluster-bjqtd.bjqtd.sandbox1429.opentlc.com
+                  default: quay-rbtlb.apps.cluster-rbtlb.rbtlb.sandbox3576.opentlc.com
                 image_organization:
                   title: Organization
                   type: string
@@ -94,7 +94,7 @@ spec:
               title: Repo Host
               type: string
               description: Your SCM host
-              default: gitlab-gitlab.apps.cluster-bjqtd.bjqtd.sandbox1429.opentlc.com
+              default: gitlab-gitlab.apps.cluster-rbtlb.rbtlb.sandbox3576.opentlc.com
             owner:
               title: Repo Owner
               type: string
@@ -124,7 +124,7 @@ spec:
           description: ${{ parameters.description }}
           namespace: ${{ parameters.component_id }}-dev
           owner: ${{ user.entity.metadata.name }}
-          cluster: .apps.cluster-bjqtd.bjqtd.sandbox1429.opentlc.com
+          cluster: .apps.cluster-rbtlb.rbtlb.sandbox3576.opentlc.com
           host: ${{ parameters.repo.host }}
           destination: ${{ parameters.repo.owner }}/${{ parameters.component_id }}
           quay_destination: ${{ parameters.image_organization}}/${{ parameters.component_id }}
@@ -160,7 +160,7 @@ spec:
           source_repository: https://${{ parameters.repo.host }}/${{ parameters.repo.owner }}/${{parameters.component_id}}.git
           repository_name: ${{parameters.component_id}}
           git_owner: ${{ parameters.repo.owner }}
-          cluster: .apps.cluster-bjqtd.bjqtd.sandbox1429.opentlc.com/
+          cluster: .apps.cluster-rbtlb.rbtlb.sandbox3576.opentlc.com/
           namespace: ${{ parameters.component_id }}-dev
           image_registry: ${{ parameters.image_registry }}
           image_host: ${{ parameters.image_host }}
