--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/.devfile.yaml
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/.devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.2.0
 metadata:
-  generateName: smiles-of-miles-
+  generateName: smiles-of-miles
 components:
   - name: development-tooling
     container:
