--- a/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/src/main/resources/application.properties
+++ b/scaffolder-templates/gitlab/chatbot-smiles-of-miles/skeleton/src/main/resources/application.properties
@@ -16,8 +16,12 @@ quarkus.langchain4j.pgvector.dimension=384
 
 quarkus.langchain4j.embedding-model.provider=dev.langchain4j.model.embedding.onnx.bgesmallenq.BgeSmallEnQuantizedEmbeddingModel
 
-quarkus.langchain4j.mcp.weather.transport-type=http
-quarkus.langchain4j.mcp.weather.url=http://mcp-weather/mcp/sse
+%prod.quarkus.langchain4j.mcp.weather.transport-type=http
+%prod.quarkus.langchain4j.mcp.weather.url=http://mcp-weather/mcp/sse
+
+# you can use the mcp server from https://github.com/quarkusio/quarkus-workshop-langchain4j/tree/main/section-1/step-08-mcp-server
+%dev.quarkus.langchain4j.mcp.weather.transport-type=streamable-http
+%dev.quarkus.langchain4j.mcp.weather.url=http://localhost:8081/mcp
 
 quarkus.langchain4j.timeout=10m
 
@@ -28,4 +32,5 @@ quarkus.langchain4j.timeout=10m
 %prod.quarkus.datasource.password=quarkus
 %prod.quarkus.datasource.username=quarkus
 # Just for demo purposes..
-%prod.quarkus.hibernate-orm.sql-load-script = import.sql
+quarkus.hibernate-orm.sql-load-script=import.sql
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
